--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 **/node_modules
 **/package-lock.json
 
+
+automation/certs
+automation/certDoc.txt
 automation/reqValidator.js
 automation/Automation.postman_collection.json
