starting centinel on demand and updating hosts

--- a/automation/properties.yaml
+++ b/automation/properties.yaml
@@ -34,7 +34,8 @@ aws:
   port: 22
   remove_old_hosts: sudo sed -i '/srv[[:digit:]]\./d' /etc/hosts
   remove_my_local_hosts: sudo sed -i '/# My hosts:/,$d' /etc/hosts
-  add_mongo_host_title: sudo sed -i -e '$a/# Mongo hosts/' /etc/hosts
+  add_my_host_title: sudo sed -i -e '$a# My hosts:' /etc/hosts
+  add_mongo_host_title: sudo sed -i -e '$a# Mongo hosts' /etc/hosts
   add_new_host: sudo sed -i -e '$a%s %s' /etc/hosts
 
 schedules:
