--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,7 @@
 automation/certs
 automation/certDoc.txt
 automation/reqValidator.js
+automation/reqValidatorAux.js
+automation/genSecData.js
+automation/backSensibleFiles.js
 automation/Automation.postman_collection.json
