--- a/automation/package.json
+++ b/automation/package.json
@@ -27,6 +27,7 @@
     "string-similarity": "^4.0.4",
     "words-to-numbers": "^1.5.1",
     "ws": "^7.4.4",
+    "ws-rate-limit": "0.0.0",
     "zip-lib": "^0.7.2"
   }
 }
