--- a/work/automation.props
+++ b/work/automation.props
@@ -19,7 +19,7 @@ list.pods.command = oc get pods
 filter.pod.regex = ^mongodb-[0-9]+
 filter.pod.status = Running
 node.storage = C:/repos/nodeAuto/storage.data
-username = paparini
-password = Alvaro01Costarica
+username = lala
+password = lolo
 forward.port.conf = 27018:27017
 vpn.url.test = https://inh-ocdev.eu.boehringer.com
