adding cert generator

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ automation/genSecData.js
 automation/backSensibleFiles.js
 automation/backWritings.js
 automation/Automation.postman_collection.json
+automation/genSecCerts.yaml
